# .config

./: .zshrc  fedora-packages.txt
Projects/AMMA/: background_listener.py  command_recognizer.py  main.py  models.py  sys_info.py  word_listener.py  word_reader.py
Projects/C++/: main  main.cpp
Projects/Emma+/: main.ipynb  what if?
Projects/GodotTutorial/godot-1/: Level.tscn  movement.gd  movement.gd.uid  player.gd  player.gd.uid  player.tscn  project.godot
Projects/NN/: CMakeLists.txt  model.json  pyproject.toml
Projects/NN/examples/: example.cpp  example.py
Projects/NN/include/: NN.c  main  main.c
Projects/NN/plans/: python lib
Projects/NN/python_lib/: NN.pyi  setup.py  shell.sh
Projects/NN/python_lib/include/: NN.hpp
Projects/NN/python_lib/src/NN.egg-info/: SOURCES.txt
Projects/NN/src/: binding.cpp  main  main.cpp  model.json
Projects/NN/src/NN.egg-info/: PKG-INFO
Projects/NN/test/: model.json  python.py
Projects/NN/versions/v1.0-effeciant-rewrite/: CMakeLists.txt
Projects/NN/versions/v1.0-effeciant-rewrite/include/: NN
Projects/NN/versions/v1.0-effeciant-rewrite/src/: main.cpp
Projects/alien-worlds/: Player.gd  Player.gd.uid  icon.svg.import  main.gd  main.gd.uid  main.tscn  player.tscn  project.godot
Projects/lost-electricity/: icon.svg.import  main.tscn  project.godot
hypr/: hyprland-gui.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
kitty/: kitty.conf
mako/: config
nvim/: init.lua  lazy-lock.json
rofi/: config.rasi
rofi/shared/: colors.rasi  fonts.rasi
waybar/: config.jsonc  config.jsonc.backup  style.css
(+1068 files in other folders)
